# rust-opentimestamps-client

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  env.sh  justfile  uniffi.toml
.github/workflows/: build-bindings-android.yml  build-bindings-darwin.yml  build-bindings-ios.yml  build-bindings-swift.yml  build-wasm.yml  integration.yml  publish-android.yml  publish.yml
bindings/: .gitignore  Cargo.toml  makefile  uniffi.toml
bindings/bindings-android/lib/: proguard-rules.pro
bindings/bindings-kotlin-multiplatform/: .gitignore  settings.gradle.kts
bindings/bindings-kotlin-multiplatform/ots-kmp/: build.gradle.kts
bindings/bindings-kotlin-multiplatform/ots-kmp/src/nativeInterop/cinterop/: ots.def
bindings/src/: lib.rs  ots.udl
bindings/swift/otsFFI.xcframework/macos-arm64_x86_64/otsFFI.framework/Headers/: otsFFI-umbrella.h
ots_bindings/: Cargo.toml  build.rs  makefile
ots_bindings/bindings-android/: .gitignore
ots_bindings/bindings-android/lib/: build.gradle.kts
ots_bindings/bindings-android/lib/src/main/: AndroidManifest.xml
ots_bindings/bindings-kotlin-multiplatform/ots-kmp/: consumer-rules.pro
ots_bindings/src/: lib.rs
ots_bindings/swift/: Package.swift
ots_bindings/swift/otsFFI.xcframework/: Info.plist
ots_bindings/swift/otsFFI.xcframework/ios-arm64/otsFFI.framework/Modules/: module.modulemap
ots_cli/: Cargo.toml
ots_cli/src/: args.rs  main.rs
ots_core/: Cargo.toml
ots_core/src/: async_calendar.rs  block_calendar.rs  client.rs  extensions.rs  lib.rs
ots_wasm/: Cargo.toml
ots_wasm/src/: error.rs  lib.rs
ots_wasm/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: args.rs  calendar.rs  client.rs  error.rs  extensions.rs  lib.rs  ots-cli.rs  ots.udl  ots.uniffi.rs  step_extension.rs  timestamp_extension.rs
