[package]
name = "opentimestamps_client"
version = "0.0.1"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/lvaccaro/rust-opentimestamps-client/"
repository = "https://github.com/lvaccaro/rust-opentimestamps-client/"
description = "Rust client for OpenTimestamps timestamps"

keywords = [ "crypto", "bitcoin", "ots", "opentimestamps", "timestamping" ]

[lib]
name = "opentimestamps_client"
path = "src/lib.rs"

[[bin]]
name = "ots-cli"
path = "src/ots-cli.rs"

[dependencies]
bitcoin_hashes = "0.12.0"
env_logger = "0.10"
log = "0.4"
ots = "0.1.3"
electrum-client = "0.19.0"

clap = { version = "~4.4", features = ["derive", "env"] }
serde_json = "1"
clap_complete = "~4.4"
rand = "0.8.5"
rs_merkle = "1.4"

reqwest = { version = "0.12", features= ["blocking"] }
camino = "1.1.6"
chrono = "0.4.37"
chrono-tz = "0.8.6"
#tokio = { version = "1", features = ["full"] }
