[workspace]

members = [
    "ots_cli",
    "ots_core",
    "ots_bindings",
    "ots_wasm"
]
resolver = "2"

[patch.crates-io]
ots_cli = { path = "ots_cli" }
ots_core = { path = "ots_core" }
ots_bindings = { path = "ots_bindings" }
ots_wasm = { path = "ots_wasm" }

[profile.release-smaller]
inherits = "release"
opt-level = 'z'      # Optimize for size.
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce number of codegen units to increase optimizations.
panic = "abort"      # Abort on panic
strip = "debuginfo"  # Partially strip symbols from binary