# Copyright (C) 2024 The OpenTimestamps developers

[package]
name = "ots_bindings"
version = "0.2.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]
description = "Rust client bindings for OpenTimestamps timestamps"
license-file = "LICENSE.txt"
repository = "https://github.com/lvaccaro/rust-opentimestamps-client/"
documentation = "https://docs.rs/crate/opentimestamps-cli"
keywords = [ "crypto", "bitcoin", "ots", "opentimestamps", "timestamping" ]
exclude = [ ".github" ]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "otsffi"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
ots_core = { version = "0.2.0" }
uniffi = { version = "=0.27.1" }
uniffi-kotlin-multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "bf48c5fcb153856e3055025a3cbfa56fbf213188" }
camino = "1.1.1"

[build-dependencies]
uniffi = { version = "=0.27.1", features = ["build"] }

[features]
default = ["uniffi/cli"]