# Copyright (C) 2024 The OpenTimestamps developers

[package]
name = "ots_cli"
version = "0.2.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]
description = "OpenTimestamps - Command line interface"
license-file = "LICENSE.txt"
repository = "https://github.com/lvaccaro/rust-opentimestamps-client/"
documentation = "https://docs.rs/crate/opentimestamps-cli"
keywords = [ "crypto", "bitcoin", "ots", "opentimestamps", "timestamping" ]
exclude = [ ".github" ]
edition = "2021"

[dependencies]
ots_core = { version = "0.2.0" }
bitcoin_hashes = "0.12.0"
bitcoincore-rpc = "0.18.0"
env_logger = "0.10"
log = "0.4"
opentimestamps = "0.2.0"
electrum-client = "0.19.0"
clap = { version = "~4.4", features = ["derive", "env"] }
clap_complete = "~4.4"
camino = "1.1.6"
chrono = "0.4.37"
chrono-tz = "0.8.6"
thiserror = "1.0.58"
