# Copyright (C) 2024 The OpenTimestamps developers

[package]
name = "ots_core"
version = "0.2.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]
description = "Rust client for OpenTimestamps timestamps"
license-file = "LICENSE.txt"
repository = "https://github.com/lvaccaro/rust-opentimestamps-client/"
documentation = "https://docs.rs/crate/opentimestamps-cli"
keywords = [ "crypto", "bitcoin", "ots", "opentimestamps", "timestamping" ]
exclude = [ ".github" ]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "ots_core"
path = "src/lib.rs"

[features]
default = ["blocking"]
async = ["esplora-client"]
blocking = ["electrum-client", "reqwest/blocking"]

[dependencies]
bitcoin_hashes = "0.14.0"
env_logger = "0.10"
log = "0.4"
opentimestamps = "0.2.0"
bitcoincore-rpc = "0.18.0"
serde_json = "1"
rand = "0.8.5"
rs_merkle = "1.4"
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
chrono = "0.4.37"
chrono-tz = "0.8.6"
thiserror = "1.0.58"


electrum-client = { version = "0.19.0", optional = true }
esplora-client = { version = "0.10.0", optional = true, default-features=false, features = [
    "async-https-rustls"
]}